Fix overflow of user message

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ input, button, textarea, select {
 
 .chat-message {
     max-width: 50%;
+    margin: 0.5em 0;
 }
 
 .bot-message {
@@ -68,8 +69,12 @@ input, button, textarea, select {
 }
 
 .message-text {
-    width: fit-content;
+    max-width: 50%;
+    min-width: fit-content;
     padding: 0.8em ;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    hyphens: auto;
 }
 
 .bot-message .message-text {
